adjustment auth and swagger auth
